--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -1,13 +1,18 @@
 .characterEditor {
   padding-top: 128px;
   padding-bottom: 64px;
+  position: relative;
 }
 
 .maxWidthWrapper {
+
 }
+
+
 
 .header {
   padding-bottom: 64px;
+  width: 65%;
 }
 
 .title {
@@ -24,7 +29,14 @@
 }
 
 .characterWrapper {
+  position: fixed;
+  min-height: 500px;
+  height: 100%;
+  width: 50%;
+  top:0;
+  right: 0;
 }
 
 .controlColumn {
+  width: 50%;
 }
